--- a/src/librarySystemcodes/LibSplash.form
+++ b/src/librarySystemcodes/LibSplash.form
@@ -136,7 +136,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="System Version 1.0.1  &#xa9; 2018 Created by T.O.O"/>
+            <Property name="text" type="java.lang.String" value="System Version 1.0.1  &#xa9; 2018 Created by Optimum Computer Systems &#xa9;2018"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblLoad">
