--- a/src/librarySystemcodes/LibraryHome.form
+++ b/src/librarySystemcodes/LibraryHome.form
@@ -2138,18 +2138,19 @@
                           <Color blue="f3" green="ba" red="81" type="rgb"/>
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="11">
+                          <StringArray count="12">
                             <StringItem index="0" value="select category to display"/>
                             <StringItem index="1" value="Arts &amp; Recreation"/>
                             <StringItem index="2" value="Computers, IT &amp; General Works"/>
                             <StringItem index="3" value="History &amp; Geography"/>
                             <StringItem index="4" value="Literature"/>
                             <StringItem index="5" value="Languages"/>
-                            <StringItem index="6" value="Philosophy &amp; Psychology"/>
-                            <StringItem index="7" value="Religion"/>
-                            <StringItem index="8" value="Science"/>
-                            <StringItem index="9" value="Social Sciences"/>
-                            <StringItem index="10" value="Technology &amp; Applied Science"/>
+                            <StringItem index="6" value="Mathematics"/>
+                            <StringItem index="7" value="Philosophy &amp; Psychology"/>
+                            <StringItem index="8" value="Religion"/>
+                            <StringItem index="9" value="Science"/>
+                            <StringItem index="10" value="Social Sciences"/>
+                            <StringItem index="11" value="Technology &amp; Applied Science"/>
                           </StringArray>
                         </Property>
                       </Properties>
@@ -2686,18 +2687,19 @@
                           <Color blue="f3" green="ba" red="81" type="rgb"/>
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="11">
+                          <StringArray count="12">
                             <StringItem index="0" value="select category to display"/>
                             <StringItem index="1" value="Arts &amp; Recreation"/>
                             <StringItem index="2" value="Computers, IT &amp; General Works"/>
                             <StringItem index="3" value="History &amp; Geography"/>
                             <StringItem index="4" value="Literature"/>
                             <StringItem index="5" value="Languages"/>
-                            <StringItem index="6" value="Philosophy &amp; Psychology"/>
-                            <StringItem index="7" value="Religion"/>
-                            <StringItem index="8" value="Science"/>
-                            <StringItem index="9" value="Social Sciences"/>
-                            <StringItem index="10" value="Technology &amp; Applied Science"/>
+                            <StringItem index="6" value="Mathematics"/>
+                            <StringItem index="7" value="Philosophy &amp; Psychology"/>
+                            <StringItem index="8" value="Religion"/>
+                            <StringItem index="9" value="Science"/>
+                            <StringItem index="10" value="Social Sciences"/>
+                            <StringItem index="11" value="Technology &amp; Applied Science"/>
                           </StringArray>
                         </Property>
                       </Properties>
@@ -4583,18 +4585,19 @@
                           <Color blue="f3" green="ba" red="81" type="rgb"/>
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="11">
+                          <StringArray count="12">
                             <StringItem index="0" value="select category to display"/>
                             <StringItem index="1" value="Arts &amp; Recreation"/>
                             <StringItem index="2" value="Computers, IT &amp; General Works"/>
                             <StringItem index="3" value="History &amp; Geography"/>
                             <StringItem index="4" value="Literature"/>
                             <StringItem index="5" value="Languages"/>
-                            <StringItem index="6" value="Philosophy &amp; Psychology"/>
-                            <StringItem index="7" value="Religion"/>
-                            <StringItem index="8" value="Science"/>
-                            <StringItem index="9" value="Social Sciences"/>
-                            <StringItem index="10" value="Technology &amp; Applied Science"/>
+                            <StringItem index="6" value="Mathematics"/>
+                            <StringItem index="7" value="Philosophy &amp; Psychology"/>
+                            <StringItem index="8" value="Religion"/>
+                            <StringItem index="9" value="Science"/>
+                            <StringItem index="10" value="Social Sciences"/>
+                            <StringItem index="11" value="Technology &amp; Applied Science"/>
                           </StringArray>
                         </Property>
                       </Properties>
@@ -5511,18 +5514,19 @@
                       <Color blue="f3" green="ba" red="81" type="rgb"/>
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="11">
+                      <StringArray count="12">
                         <StringItem index="0" value="Filter by :"/>
                         <StringItem index="1" value="Arts &amp; Recreation"/>
                         <StringItem index="2" value="Computers, IT &amp; General Works"/>
                         <StringItem index="3" value="History &amp; Geography"/>
                         <StringItem index="4" value="Literature"/>
                         <StringItem index="5" value="Languages"/>
-                        <StringItem index="6" value="Philosophy &amp; Psychology"/>
-                        <StringItem index="7" value="Religion"/>
-                        <StringItem index="8" value="Science"/>
-                        <StringItem index="9" value="Social Sciences"/>
-                        <StringItem index="10" value="Technology &amp; Applied Science"/>
+                        <StringItem index="6" value="Mathematics"/>
+                        <StringItem index="7" value="Philosophy &amp; Psychology"/>
+                        <StringItem index="8" value="Religion"/>
+                        <StringItem index="9" value="Science"/>
+                        <StringItem index="10" value="Social Sciences"/>
+                        <StringItem index="11" value="Technology &amp; Applied Science"/>
                       </StringArray>
                     </Property>
                   </Properties>
