major changes to the adding book section

--- a/src/librarySystemcodes/AddBookDialog.form
+++ b/src/librarySystemcodes/AddBookDialog.form
@@ -660,6 +660,7 @@
                       <Image iconType="3" name="/images/Cancelblack_16.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Cancel"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Clear fields above"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                         <LineBorder roundedCorners="true" thickness="2">
